--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
 <body>
     <p>Redirecting to <a href="https://www.peppermint.engineering">peppermint.engineering</a>...</p>
     <p>If you are not redirected automatically, <a href="https://www.peppermint.engineering">click here</a>.</p>
+
+    <!-- Default Statcounter code for Peppermint.food
+    https://www.peppermint.food -->
+    <script type="text/javascript">
+        var sc_project = 12995318;
+        var sc_invisible = 1;
+        var sc_security = "ac71d02c"; 
+    </script>
+    <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+    <noscript>
+        <div class="statcounter"><a title="Web Analytics" href="https://statcounter.com/" target="_blank"><img
+                    class="statcounter" src="https://c.statcounter.com/12995318/0/ac71d02c/1/" alt="Web Analytics"
+                    referrerPolicy="no-referrer-when-downgrade"></a></div>
+    </noscript>
+    <!-- End of Statcounter Code -->
 </body>
 
 </html>
