Update styles and copy

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
+    <title>Peppermint Coming Soon</title>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MH0DLH6ERP"></script>
@@ -16,17 +16,92 @@
         gtag('config', 'G-MH0DLH6ERP');
     </script>
 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: #0a0a0a;
+            color: #ffffff;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .spinner {
+            width: 40px;
+            height: 40px;
+            border: 3px solid #333;
+            border-top: 3px solid #ffffff;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin-bottom: 24px;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        .content {
+            max-width: 400px;
+            padding: 0 20px;
+        }
+
+        h1 {
+            font-size: 24px;
+            font-weight: 500;
+            margin-bottom: 12px;
+            letter-spacing: -0.5px;
+        }
+
+        p {
+            font-size: 16px;
+            color: #888;
+            line-height: 1.5;
+            margin-bottom: 8px;
+        }
+
+        a {
+            color: #ffffff;
+            text-decoration: none;
+            border-bottom: 1px solid #333;
+            transition: border-color 0.2s ease;
+        }
+
+        a:hover {
+            border-color: #666;
+        }
+    </style>
+
     <script>
         // Delayed redirect to allow tracking scripts to execute
         setTimeout(function () {
             window.location.href = "https://www.peppermint.engineering";
-        }, 500); // 0.5 second delay
+        }, 1000); // 1 second delay
     </script>
 </head>
 
 <body>
-    <p>Redirecting to <a href="https://www.peppermint.engineering">peppermint.engineering</a>...</p>
-    <p>If you are not redirected automatically, <a href="https://www.peppermint.engineering">click here</a>.</p>
+    <div class="content">
+        <div class="spinner"></div>
+        <h1><strong>New Peppermint.food</strong> website launching soon!</h1>
+        <p>Taking you to <a href="https://www.peppermint.engineering">the company website...</a></p>
+    </div>
 
     <!-- Default Statcounter code for Peppermint.food
     https://www.peppermint.food -->
